remove name on smaller screens. fix responsives of sidebar socials

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -24,12 +24,17 @@
   font-size: 16px;
   z-index: 200;
   text-align: center;
-  max-width: 60px;
+  max-width: 100px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  @include mquery(330) {
-    max-width: 100px;
+
+  p {
+    display: none;
+
+    @include mquery(800) {
+      display: inline-block;
+    }
   }
 
   @include mquery(440) {
@@ -47,7 +52,6 @@
   height: 50px;
   width: 50px;
   margin-right: 20px;
-  margin-left: 20px;
 }
 
 .navbar__logo_image {
@@ -199,7 +203,7 @@
 }
 
 .socialIcon__container {
-  margin-right: 30px;
+  margin-right: 20px;
   background-color: $main-color-dark;
   padding: 7px;
   border-radius: 100%;
@@ -208,12 +212,20 @@
     cursor: pointer;
   }
 
+  @include mquery(330) {
+    margin-right: 30px;
+  }
+
   &:last-of-type {
     margin-right: 0;
   }
 }
 
 .socialIcon {
-  font-size: 35px;
   color: white;
+  font-size: 30px;
+
+  @include mquery(330) {
+    font-size: 35px;
+  }
 }
